# native-sound-mixer

./: .eslintrc.yml  .gitignore  .goreleaser.yml  .npmignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  binding.gyp  default.nix  doxygen.conf  errors.go  flake.nix  go.mod  index.html  jest.config.js  main.go  mixerWrapper.js  model.go  package-lock.json  package.json  soundmixer.js  tsconfig-cjs.json  tsconfig.json
.github/workflows/: build.yml  deploy-docs.yml  integration.yml  lint.yml  linux-change.yml  publish-package.yml  ts-change.yml  win-change.yml
@types/: mixer-wrapper.d.ts  mixer-wrapper.d.ts.map  sound-mixer.d.ts
@types/model/: device.d.ts  device.d.ts.map  device.js  model.d.ts
addons/sound-mixer/: SoundMixer.d.ts  index.js  package.json
assets/: highlight.css  search.js
classes/: AudioSession.html  Device.html
cmd/crawler/: crawler.go  main.go
cppsrc/: .clang-format  main.cpp
cppsrc/headers/: sound-mixer-utils.h  sound-mixer-utils.hpp  sound-mixer.h  sound-mixer.hpp
cppsrc/linux/: linux-sound-mixer.cpp  linux-sound-mixer.hpp  sound-mixer-utils.cpp  sound-mixer-utils.hpp  sound-mixer.cpp  sound-mixer.hpp
cppsrc/linux/headers/: linux-sound-mixer.hpp  sound-mixer.hpp
cppsrc/shared/: sound-mixer-utils.cpp
cppsrc/source/: sound-mixer-utils.cpp  sound-mixer.cpp
cppsrc/win/: main.cpp  sound-mixer-utils.cpp  sound-mixer-utils.hpp  sound-mixer.cpp  sound-mixer.hpp  win-sound-mixer.cpp  win-sound-mixer.hpp
cppsrc/win/headers/: sound-mixer-utils.h  sound-mixer-utils.hpp  sound-mixer.hpp  win-sound-mixer.hpp
cppsrc/win/source/: sound-mixer-utils.cpp  sound-mixer.cpp
dev/: modules.html
dev/classes/: AudioSession.html  Device.html
dev/enums/: AudioSessionState.html  DeviceType.html
dev/interfaces/: VolumeBalance.html
dev/types/: SoundMixer.html  VolumeScalar.html
dev/variables/: default.html
enums/: AudioSessionState.html  DeviceType.html
interfaces/: VolumeBalance.html
master/classes/: AudioSession.html  Device.html
master/enums/: AudioSessionState.html  DeviceType.html
master/interfaces/: VolumeBalance.html
master/types/: SoundMixer.html  VolumeScalar.html
master/variables/: default.html
scripts/: check-bins.js  clean.js  copy-bins.js  format.sh  prepublish.js
src/: errors.go  main.go  mixer-wrapper.js  mixer-wrapper.ts  model.go  sound-mixer.ts
src/impl/: model-impl.ts
src/model/: device.ts  model.ts
test/: memory.js  sound-mixer.test.ts
test/model/: device.test.ts  session.test.ts
tests/: mixerWrapper.test.js
types/: SoundMixer.html  VolumeScalar.html
variables/: default.html
